[package]
name = "map-sprite-packer"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jonas Meurer <jmpunkt@outlook.com>"]
readme = "README.org"
repository = "https://github.com/jmpunkt/map-sprite-packer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
resvg = "0.36.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
binpack2d = "1.0.1"
usvg-text-layout = "0.36.0"
usvg = "0.36.0"
